--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "1.15.6",
     "font-awesome": "4.7.0",
     "helmet": "3.14.0",
+    "history": "4.7.2",
     "js-yaml": "3.12.0",
     "log4js": "3.0.6",
     "md5": "2.2.1",
@@ -36,7 +37,17 @@
     "passport-local": "1.0.0",
     "power-assert": "1.6.1",
     "pug": "2.0.3",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
+    "react-intl": "2.7.1",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.3.1",
+    "react-router-redux": "4.0.8",
     "redis": "2.8.0",
+    "redux": "4.0.1",
+    "redux-logger": "3.0.6",
+    "redux-persist": "5.10.0",
+    "redux-saga": "0.16.2",
     "request": "2.88.0",
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.9",
@@ -54,6 +65,7 @@
     "@types/express": "4.16.0",
     "@types/express-session": "1.15.11",
     "@types/helmet": "0.0.42",
+    "@types/history": "4.7.2",
     "@types/jest": "23.3.5",
     "@types/md5": "2.1.33",
     "@types/mysql": "2.15.5",
@@ -61,7 +73,17 @@
     "@types/passport": "0.4.6",
     "@types/passport-local": "1.0.33",
     "@types/power-assert": "1.5.0",
+    "@types/react": "16.4.18",
+    "@types/react-dom": "16.0.9",
+    "@types/react-intl": "2.3.11",
+    "@types/react-redux": "6.0.9",
+    "@types/react-router-dom": "4.3.1",
+    "@types/react-router-redux": "5.0.16",
     "@types/redis": "2.8.7",
+    "@types/redux-logger": "3.0.6",
+    "@types/redux-mock-store": "1.0.0",
+    "@types/redux-persist": "4.3.1",
+    "@types/redux-saga": "0.10.5",
     "@types/request": "2.47.1",
     "@types/serve-favicon": "2.2.30",
     "@types/sinon": "5.0.5",
@@ -70,6 +92,7 @@
     "enzyme-adapter-react-16": "1.6.0",
     "eslint": "5.7.0",
     "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-react": "7.11.1",
     "eslint-plugin-security": "1.4.0",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "6.0.0",
@@ -82,6 +105,8 @@
     "gulp-typescript": "5.0.0-alpha.3",
     "gulp-watch": "5.0.1",
     "jest": "23.6.0",
+    "react-test-renderer": "16.5.2",
+    "redux-mock-store": "1.5.3",
     "rimraf": "2.6.2",
     "run-sequence": "2.2.1",
     "sinon": "7.0.0",
@@ -91,7 +116,7 @@
     "typescript-eslint-parser": "20.0.0",
     "webpack": "4.21.0",
     "webpack-cli": "3.1.2",
-    "webpack-serve": "2.0.2",
+    "webpack-dev-server": "3.1.9",
     "webpack-stream": "5.1.1"
   },
   "jest": {
