--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-intl": "2.7.1",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
-    "react-router-redux": "4.0.8",
+    "react-router-redux": "5.0.0-alpha.9",
     "redis": "2.8.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -115,7 +115,7 @@
     "ts-loader": "5.2.2",
     "typescript": "3.1.3",
     "typescript-eslint-parser": "20.0.0",
-    "webpack": "4.21.0",
+    "webpack": "4.22.0",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.9",
     "webpack-stream": "5.1.1"
