--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "compile": "gulp dev",
     "build": "gulp build",
     "gulp:watch": "gulp",
     "webpack:watch": "webpack-dev-server --hot --config webpack.dev.config.js",
@@ -15,33 +14,33 @@
     "lint": "eslint --ext .ts,.tsx --fix src/"
   },
   "dependencies": {
-    "@material-ui/core": "3.3.2",
-    "bcrypt": "3.0.2",
+    "@material-ui/core": "3.9.0",
+    "bcrypt": "3.0.3",
     "body-parser": "1.18.3",
-    "bourbon-neat": "3.0.0",
-    "chance": "1.0.16",
+    "bourbon-neat": "3.0.1",
+    "chance": "1.0.18",
     "compression": "1.7.3",
-    "config": "2.0.1",
+    "config": "3.0.1",
     "connect-redis": "3.4.0",
     "cookie-parser": "1.4.3",
     "express": "4.16.4",
     "express-session": "1.15.6",
     "font-awesome": "4.7.0",
-    "helmet": "3.14.0",
+    "helmet": "3.15.0",
     "history": "4.7.2",
-    "js-yaml": "3.12.0",
+    "js-yaml": "3.12.1",
     "log4js": "3.0.6",
     "md5": "2.2.1",
-    "moment": "2.22.2",
+    "moment": "2.23.0",
     "mysql": "2.16.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "power-assert": "1.6.1",
     "pug": "2.0.3",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
-    "react-intl": "2.7.2",
-    "react-redux": "5.1.0",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-intl": "2.8.0",
+    "react-redux": "6.0.0",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
     "redis": "2.8.0",
@@ -51,8 +50,8 @@
     "redux-saga": "0.16.2",
     "request": "2.88.0",
     "serve-favicon": "2.5.0",
-    "source-map-support": "0.5.9",
-    "superagent": "4.0.0-beta.5"
+    "source-map-support": "0.5.10",
+    "superagent": "4.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
@@ -60,65 +59,58 @@
     "@types/chance": "1.0.1",
     "@types/compression": "0.0.36",
     "@types/config": "0.0.34",
-    "@types/connect-redis": "0.0.7",
+    "@types/connect-redis": "0.0.8",
     "@types/cookie-parser": "1.4.1",
-    "@types/enzyme": "3.1.14",
+    "@types/enzyme": "3.1.15",
     "@types/express": "4.16.0",
     "@types/express-session": "1.15.11",
     "@types/helmet": "0.0.42",
     "@types/history": "4.7.2",
-    "@types/jest": "23.3.9",
+    "@types/jest": "23.3.12",
     "@types/md5": "2.1.33",
     "@types/mysql": "2.15.5",
-    "@types/node": "10.12.2",
-    "@types/passport": "0.4.7",
+    "@types/node": "10.12.18",
+    "@types/passport": "1.0.0",
     "@types/passport-local": "1.0.33",
     "@types/power-assert": "1.5.0",
-    "@types/react": "16.4.18",
-    "@types/react-dom": "16.0.9",
-    "@types/react-intl": "2.3.11",
-    "@types/react-redux": "6.0.9",
+    "@types/react": "16.7.19",
+    "@types/react-dom": "16.0.11",
+    "@types/react-intl": "2.3.15",
+    "@types/react-redux": "7.0.0",
     "@types/react-router-dom": "4.3.1",
-    "@types/react-router-redux": "5.0.16",
-    "@types/redis": "2.8.7",
+    "@types/react-router-redux": "5.0.17",
+    "@types/redis": "2.8.10",
     "@types/redux-logger": "3.0.6",
     "@types/redux-mock-store": "1.0.0",
     "@types/redux-persist": "4.3.1",
     "@types/redux-saga": "0.10.5",
-    "@types/request": "2.48.0",
+    "@types/request": "2.48.1",
     "@types/serve-favicon": "2.2.30",
-    "@types/sinon": "5.0.5",
-    "@types/superagent": "3.8.4",
-    "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.6.0",
-    "eslint": "5.8.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-security": "1.4.0",
-    "gulp": "3.9.1",
+    "@types/sinon": "7.0.3",
+    "@types/superagent": "3.8.6",
+    "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.7.1",
+    "gulp": "4.0.0",
     "gulp-autoprefixer": "6.0.0",
-    "gulp-cached": "1.1.1",
-    "gulp-clean-css": "3.10.0",
+    "gulp-clean-css": "4.0.0",
     "gulp-csscomb": "3.0.8",
-    "gulp-nodemon": "2.4.1",
-    "gulp-plumber": "1.2.0",
+    "gulp-nodemon": "2.4.2",
+    "gulp-plumber": "1.2.1",
     "gulp-sass": "4.0.2",
-    "gulp-typescript": "5.0.0-alpha.3",
-    "gulp-watch": "5.0.1",
+    "gulp-typescript": "5.0.0",
     "jest": "23.6.0",
-    "react-test-renderer": "16.6.0",
+    "react-test-renderer": "16.7.0",
     "redux-mock-store": "1.5.3",
-    "rimraf": "2.6.2",
-    "run-sequence": "2.2.1",
-    "sinon": "7.1.1",
-    "ts-jest": "23.10.4",
-    "ts-loader": "5.3.0",
-    "typescript": "3.1.6",
-    "typescript-eslint-parser": "20.1.1",
-    "webpack": "4.24.0",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10",
-    "webpack-stream": "5.1.1"
+    "rimraf": "2.6.3",
+    "sinon": "7.2.2",
+    "ts-jest": "23.10.5",
+    "ts-loader": "5.3.3",
+    "typescript": "3.2.2",
+    "typescript-eslint-parser": "21.0.2",
+    "webpack": "4.28.4",
+    "webpack-cli": "3.2.1",
+    "webpack-dev-server": "3.1.14",
+    "webpack-stream": "5.2.1"
   },
   "jest": {
     "transform": {
