--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "1.7.3",
     "config": "3.0.1",
     "connect-redis": "3.4.0",
+    "connected-react-router": "6.2.1",
     "cookie-parser": "1.4.3",
     "express": "4.16.4",
     "express-session": "1.15.6",
@@ -42,7 +43,6 @@
     "react-intl": "2.8.0",
     "react-redux": "6.0.0",
     "react-router-dom": "4.3.1",
-    "react-router-redux": "5.0.0-alpha.9",
     "redis": "2.8.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -78,7 +78,6 @@
     "@types/react-intl": "2.3.15",
     "@types/react-redux": "7.0.0",
     "@types/react-router-dom": "4.3.1",
-    "@types/react-router-redux": "5.0.17",
     "@types/redis": "2.8.10",
     "@types/redux-logger": "3.0.6",
     "@types/redux-mock-store": "1.0.0",
