--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "request": "2.88.0",
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.10",
-    "superagent": "4.1.0"
+    "superagent": "4.1.0",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
@@ -86,6 +87,7 @@
     "@types/serve-favicon": "2.2.30",
     "@types/sinon": "7.0.3",
     "@types/superagent": "3.8.6",
+    "@types/uuid": "3.4.4",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
     "gulp": "4.0.0",
