--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .ts,.tsx --fix src/"
   },
   "dependencies": {
+    "@handsontable/react": "2.1.0",
     "@material-ui/core": "3.9.0",
     "bcrypt": "3.0.3",
     "body-parser": "1.18.3",
@@ -26,6 +27,7 @@
     "express": "4.16.4",
     "express-session": "1.15.6",
     "font-awesome": "4.7.0",
+    "handsontable": "6.2.2",
     "helmet": "3.15.0",
     "history": "4.7.2",
     "js-yaml": "3.12.1",
