--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "pm2 start ecosystem.config.js",
     "stop": "pm2 stop ecosystem.config.js",
     "test": "jest test",
-    "lint": "eslint --ext .ts,.tsx --fix src/"
+    "lint": "tslint 'src/**/*.ts' --fix"
   },
   "dependencies": {
     "@handsontable/react": "2.1.0",
@@ -105,6 +105,7 @@
     "sinon": "7.2.2",
     "ts-jest": "23.10.5",
     "ts-loader": "5.3.3",
+    "tslint": "5.12.1",
     "typescript": "3.2.4",
     "webpack": "4.28.4",
     "webpack-cli": "3.2.1",
