--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "handsontable": "6.2.2",
     "helmet": "3.15.0",
     "history": "4.7.2",
+    "http-status": "1.3.1",
     "js-yaml": "3.12.1",
     "log4js": "3.0.6",
     "md5": "2.2.1",
