--- a/config/test.yml
+++ b/config/test.yml
@@ -2,6 +2,7 @@ port: 3000
 cookieParser: 'dIU8iSxRLHxppDAOJ1UcJOhPcgDAJss8'
 session:
   secret: '5xPNqhCgHafvkDQzlcY51iCfUPJvVTnD'
+  maxAge: 3600000
 redis:
   host: 'veau_redis'
   port: 6379
