--- a/config/development.yml
+++ b/config/development.yml
@@ -2,6 +2,7 @@ port: 3000
 cookieParser: 'TE1tZls3AWpetraaWtr1LpQUBbq8gLGs'
 session:
   secret: 'Ziuye5J4VmwxacL7dvV98dqUqT7HbfTn'
+  maxAge: 28800000
 redis:
   host: 'veau_redis'
   port: 6379
