--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "webpack:watch": "webpack-dev-server --hot --config webpack.dev.config.js",
     "start": "pm2 start ecosystem.config.js",
     "stop": "pm2 stop ecosystem.config.js",
-    "test": "jest test",
+    "test": "jest test --detectOpenHandles",
     "lint": "tslint 'src/**/*.ts{,x}' --fix"
   },
   "dependencies": {
