--- a/config/development.yml
+++ b/config/development.yml
@@ -4,11 +4,11 @@ session:
   secret: 'Ziuye5J4VmwxacL7dvV98dqUqT7HbfTn'
   maxAge: 28800000
 redis:
-  host: 'veau_redis'
-  port: 6379
+  host: '127.0.0.1'
+  port: 6380
 mysql:
-  host: 'veau_mysql'
-  port: 3306
+  host: '127.0.0.1'
+  port: 3310
   user: 'root'
   password: 'veau'
   database: 'veau'
