--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "pm2 start ecosystem.config.js",
     "stop": "pm2 stop ecosystem.config.js",
     "test": "jest test --detectOpenHandles",
-    "lint": "tslint 'src/**/*.ts{,x}' --fix"
+    "lint": "tslint 'src/**/*.ts{,x}' --fix",
+    "lint:check": "tslint-config-prettier-check ./tslint.json"
   },
   "dependencies": {
     "@handsontable/react": "2.1.0",
@@ -98,6 +99,7 @@
     "gulp-sass": "4.0.2",
     "gulp-typescript": "5.0.0",
     "jest": "23.6.0",
+    "prettier": "1.16.1",
     "react-test-renderer": "16.7.0",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
@@ -105,6 +107,7 @@
     "ts-jest": "23.10.5",
     "ts-loader": "5.3.3",
     "tslint": "5.12.1",
+    "tslint-config-prettier": "1.17.0",
     "typescript": "3.2.4",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
