--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "connect-redis": "3.4.0",
     "connected-react-router": "6.2.2",
     "cookie-parser": "1.4.3",
+    "d3": "5.7.0",
     "express": "4.16.4",
     "express-session": "1.15.6",
     "handsontable": "6.2.2",
@@ -63,6 +64,7 @@
     "@types/config": "0.0.34",
     "@types/connect-redis": "0.0.8",
     "@types/cookie-parser": "1.4.1",
+    "@types/d3": "5.7.0",
     "@types/enzyme": "3.1.15",
     "@types/express": "4.16.1",
     "@types/express-session": "1.15.11",
@@ -74,7 +76,7 @@
     "@types/node": "10.12.18",
     "@types/passport": "1.0.0",
     "@types/passport-local": "1.0.33",
-    "@types/react": "16.7.20",
+    "@types/react": "16.7.21",
     "@types/react-dom": "16.0.11",
     "@types/react-intl": "2.3.15",
     "@types/react-redux": "7.0.1",
