--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "pm2 start ecosystem.config.js",
     "stop": "pm2 stop ecosystem.config.js",
     "test": "jest test --detectOpenHandles",
-    "lint": "tslint 'src/**/*.ts{,x}' --fix",
-    "lint:check": "tslint-config-prettier-check ./tslint.json"
+    "lint": "tslint 'src/**/*.ts{,x}' --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.6.3",
