--- a/docker-compose/staging/docker-compose.yml
+++ b/docker-compose/staging/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       MYSQL_ROOT_PASSWORD: 'veau'
       MYSQL_DATABASE: 'veau'
     volumes:
-    - '$PWD/mysql/cnf:/etc/mysql/conf.d'
-    - '$PWD/mysql/initdata:/docker-entrypoint-initdb.d'
+      - '$PWD/mysql/cnf:/etc/mysql/conf.d'
+      - '$PWD/mysql/initdata:/docker-entrypoint-initdb.d'
   veau_redis:
     container_name: 'veau_redis'
     image: 'redis:4.0.11-alpine'
@@ -18,12 +18,12 @@ services:
     ports:
       - '80:80'
     volumes:
-      - '$PWD/nginx/veau.conf:/etc/nginx/conf.d/default.conf'
+      - '$PWD/nginx:/etc/nginx/conf.d'
     links:
       - 'veau'
   veau:
     container_name: 'veau'
-    image: 'gcr.io/veau-229916/veau'
+    image: 'gcr.io/veau-229916/veau:latest'
     environment:
       NODE_ENV: 'staging'
     ports:
