--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-intl": "2.8.0",
     "react-redux": "6.0.0",
     "react-router-dom": "4.3.1",
+    "recharts": "1.4.2",
     "redis": "2.8.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -51,8 +52,7 @@
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.10",
     "superagent": "4.1.0",
-    "uuid": "3.3.2",
-    "victory": "31.2.0"
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
@@ -78,6 +78,7 @@
     "@types/react-intl": "2.3.15",
     "@types/react-redux": "7.0.1",
     "@types/react-router-dom": "4.3.1",
+    "@types/recharts": "1.1.10",
     "@types/redis": "2.8.10",
     "@types/redux-logger": "3.0.6",
     "@types/redux-mock-store": "1.0.0",
@@ -86,7 +87,6 @@
     "@types/sinon": "7.0.5",
     "@types/superagent": "3.8.6",
     "@types/uuid": "3.4.4",
-    "@types/victory": "31.0.6",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
     "gulp": "4.0.0",
