use string in case of the database type is date or datetime in stead of javascript Date class

--- a/config/demo.yml
+++ b/config/demo.yml
@@ -13,6 +13,7 @@ mysql:
   password: 'veau'
   database: 'veau'
   charset: 'utf8mb4'
+  dateStrings: true
   connectionLimit: 50
   connectTimeout: 60000
   acquireTimeout: 60000
