--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "testRegex": "/__tests__/.+\\.spec\\.tsx?$",
     "moduleFileExtensions": [
       "js",
       "jsx",
