--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "helmet": "3.15.0",
     "history": "4.7.2",
     "http-status": "1.3.1",
+    "ioredis": "4.6.2",
     "js-yaml": "3.12.1",
     "log4js": "4.0.2",
     "moment": "2.24.0",
@@ -47,7 +48,6 @@
     "react-redux": "6.0.0",
     "react-router-dom": "4.3.1",
     "recharts": "1.4.2",
-    "redis": "2.8.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-saga": "1.0.1",
@@ -70,6 +70,7 @@
     "@types/express-session": "1.15.11",
     "@types/helmet": "0.0.42",
     "@types/history": "4.7.2",
+    "@types/ioredis": "4.0.6",
     "@types/jest": "24.0.0",
     "@types/mysql": "2.15.5",
     "@types/node": "10.12.24",
@@ -81,7 +82,6 @@
     "@types/react-redux": "7.0.1",
     "@types/react-router-dom": "4.3.1",
     "@types/recharts": "1.1.10",
-    "@types/redis": "2.8.10",
     "@types/redux-logger": "3.0.6",
     "@types/redux-mock-store": "1.0.0",
     "@types/request": "2.48.1",
