--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/serve-favicon": "2.2.30",
     "@types/sinon": "7.0.5",
     "@types/superagent": "3.8.6",
+    "@types/supertest": "2.0.7",
     "@types/uuid": "3.4.4",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.9.1",
@@ -104,6 +105,7 @@
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
     "sinon": "7.2.3",
+    "supertest": "3.4.2",
     "ts-jest": "23.10.5",
     "ts-loader": "5.3.3",
     "tslint": "5.12.1",
