--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/express-session": "1.15.11",
     "@types/helmet": "0.0.42",
     "@types/history": "4.7.2",
+    "@types/http-status": "0.2.30",
     "@types/ioredis": "4.0.6",
     "@types/jest": "24.0.1",
     "@types/mysql": "2.15.5",
