--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "request": "2.88.0",
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.10",
-    "superagent": "4.1.0",
-    "uuid": "3.3.2"
+    "superagent": "4.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
@@ -88,7 +87,6 @@
     "@types/sinon": "7.0.6",
     "@types/superagent": "3.8.6",
     "@types/supertest": "2.0.7",
-    "@types/uuid": "3.4.4",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.9.1",
     "gulp": "4.0.0",
