--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "pm2-runtime start ecosystem.config.js",
     "stop": "pm2-runtime stop ecosystem.config.js",
     "test": "jest test --detectOpenHandles --coverage",
-    "lint": "tslint 'src/**/*.ts{,x}' --fix"
+    "lint": "tslint 'src/**/*.ts{,x}' --fix",
+    "u": "yarn upgrade-interactive"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.7.2",
