--- a/docker-compose/demo/nginx/veau.conf
+++ b/docker-compose/demo/nginx/veau.conf
@@ -1,4 +1,8 @@
 server {
+  listen 443 default ssl;
+  ssl on;
+  ssl_certificate /etc/nginx/conf.d/server.crt;
+  ssl_certificate_key /etc/nginx/conf.d/server.key;
   server_name localhost;
 
   proxy_set_header  Host  $host;
