--- a/docker-compose/demo/nginx/veau.conf
+++ b/docker-compose/demo/nginx/veau.conf
@@ -1,6 +1,6 @@
+ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 server {
-  listen 443 default ssl;
-  ssl on;
+  listen 443 ssl;
   ssl_certificate /etc/nginx/conf.d/server.crt;
   ssl_certificate_key /etc/nginx/conf.d/server.key;
   server_name localhost;
