--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-dom": "16.8.4",
     "react-intl": "2.8.0",
     "react-redux": "6.0.1",
-    "react-router-dom": "4.4.0",
+    "react-router-dom": "4.4.0-beta.8",
     "recharts": "1.5.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
