--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "u": "yarn upgrade-interactive"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.8.0",
+    "@fortawesome/fontawesome-free": "5.8.1",
     "@handsontable/react": "3.0.0",
     "@material-ui/core": "3.9.2",
     "bcrypt": "3.0.5",
@@ -42,11 +42,11 @@
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "pug": "2.0.3",
-    "react": "16.8.4",
-    "react-dom": "16.8.4",
+    "react": "16.8.5",
+    "react-dom": "16.8.5",
     "react-intl": "2.8.0",
     "react-redux": "6.0.1",
-    "react-router-dom": "4.4.0-beta.8",
+    "react-router-dom": "5.0.0",
     "recharts": "1.5.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -71,7 +71,7 @@
     "@types/ioredis": "4.0.10",
     "@types/jest": "24.0.11",
     "@types/mysql": "2.15.5",
-    "@types/node": "11.11.4",
+    "@types/node": "11.11.6",
     "@types/passport": "1.0.0",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.8.8",
@@ -98,7 +98,7 @@
     "gulp-sass": "4.0.2",
     "gulp-typescript": "5.0.1",
     "jest": "24.5.0",
-    "react-test-renderer": "16.8.4",
+    "react-test-renderer": "16.8.5",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
     "sinon": "7.3.0",
