--- a/config/demo.yml
+++ b/config/demo.yml
@@ -3,10 +3,10 @@ session:
   secret: 'iASDFnPvDbvG8xZS6njmtpBXZz7BP2jQ'
   maxAge: 28800000
 redis:
-  host: 'veau_redis'
+  host: 'localhost'
   port: 6379
 mysql:
-  host: 'veau_mysql'
+  host: 'localhost'
   port: 3306
   user: 'root'
   password: 'veau'
