ingress adopted wildcard

--- a/deployment/k8s/veau-ingress.yml
+++ b/deployment/k8s/veau-ingress.yml
@@ -11,7 +11,7 @@ spec:
     - host: 'www.jamashita.dev'
       http:
         paths:
-          - path: '/'
+          - path: '/.*'
             backend:
               serviceName: 'veau-service'
               servicePort: 9000
