--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "veau",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "main": "dist/veau-server/Server.js",
   "repository": "git@gitlab.com:jamashita/veau.git",
   "author": "jamashita <jamashita@arachnid.xyz>",
@@ -13,8 +13,7 @@
     "start": "pm2-runtime start ecosystem.config.js",
     "stop": "pm2-runtime stop ecosystem.config.js",
     "test": "jest test --detectOpenHandles --coverage",
-    "lint": "tslint 'src/**/*.ts{,x}' --fix",
-    "u": "yarn upgrade-interactive"
+    "lint": "tslint 'src/**/*.ts{,x}' --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.8.1",
