--- a/deployment/staging/docker-compose.yml
+++ b/deployment/staging/docker-compose.yml
@@ -25,9 +25,9 @@ services:
       - 'veau'
   veau:
     container_name: 'veau'
-    image: 'gcr.io/veau-229916/veau:latest'
+    image: 'gcr.io/veau-229916/veau:1.2.0'
     environment:
-      NODE_ENV: 'demo'
+      NODE_ENV: 'staging'
     ports:
       - '4000:4000'
     links:
