--- a/config/k8s.yml
+++ b/config/k8s.yml
@@ -6,10 +6,10 @@ redis:
   host: 'localhost'
   port: 6379
 mysql:
-  host: 'localhost'
+  host: '172.30.192.4'
   port: 3306
   user: 'root'
-  password: 'veau'
+  password: 'icPtQWE9op46nx2z7GEMqzbUm0EpxBT8'
   database: 'veau'
   charset: 'utf8mb4'
   dateStrings: true
