--- a/deployment/k8s/veau-deployment.yml
+++ b/deployment/k8s/veau-deployment.yml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         app: 'veau'
+      annotations:
+        appVersion: '1.2.5'
     spec:
       containers:
         - name: 'veau'
