--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "http-status": "1.3.2",
     "ioredis": "4.9.0",
     "js-yaml": "3.13.1",
+    "lodash": "4.17.11",
     "log4js": "4.1.0",
     "moment": "2.24.0",
     "mysql": "2.17.1",
@@ -69,6 +70,7 @@
     "@types/history": "4.7.2",
     "@types/ioredis": "4.0.10",
     "@types/jest": "24.0.12",
+    "@types/lodash": "4.14.123",
     "@types/mysql": "2.15.6",
     "@types/node": "11.13.8",
     "@types/passport": "1.0.0",
