--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "strict": true,
     "strictFunctionTypes": false,
     "types": [
-      "node"
+      "node",
+      "jest"
     ]
   },
   "include": [
