--- a/config/development.yml
+++ b/config/development.yml
@@ -2,6 +2,7 @@ port: 3000
 session:
   secret: 'Ziuye5J4VmwxacL7dvV98dqUqT7HbfTn'
   maxAge: 28800000
+  secure: false
 redis:
   host: 'localhost'
   port: 6380
