--- a/config/k8s.yml
+++ b/config/k8s.yml
@@ -2,6 +2,7 @@ port: 4000
 session:
   secret: 'CRfcO1eDCHgY36O2JTaAmzuTmpJOWZFq'
   maxAge: 28800000
+  secure: true
 redis:
   host: 'localhost'
   port: 6379
