--- a/config/staging.yml
+++ b/config/staging.yml
@@ -2,6 +2,7 @@ port: 4000
 session:
   secret: 'iASDFnPvDbvG8xZS6njmtpBXZz7BP2jQ'
   maxAge: 28800000
+  secure: false
 redis:
   host: 'veau_redis'
   port: 6379
