--- a/config/k8s.yml
+++ b/config/k8s.yml
@@ -2,7 +2,7 @@ port: 4000
 session:
   secret: 'CRfcO1eDCHgY36O2JTaAmzuTmpJOWZFq'
   maxAge: 28800000
-  secure: true
+  secure: false
 redis:
   host: 'localhost'
   port: 6379
