--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "helmet": "3.18.0",
     "history": "4.9.0",
     "http-status": "1.3.2",
-    "ioredis": "4.9.0",
+    "ioredis": "4.9.3",
     "js-yaml": "3.13.1",
     "lodash": "4.17.11",
     "log4js": "4.1.1",
@@ -90,7 +90,7 @@
     "@types/supertest": "2.0.7",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.12.1",
-    "gulp": "4.0.1",
+    "gulp": "4.0.2",
     "gulp-autoprefixer": "6.1.0",
     "gulp-clean-css": "4.2.0",
     "gulp-nodemon": "2.4.2",
@@ -104,7 +104,7 @@
     "sinon": "7.3.2",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
-    "ts-loader": "5.3.3",
+    "ts-loader": "6.0.0",
     "tslint": "5.16.0",
     "typescript": "3.4.5",
     "webpack": "4.30.0",
@@ -117,6 +117,9 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "/__tests__/.+\\.spec\\.tsx?$",
+    "moduleNameMapper": {
+      "@/(.*)": "<rootDir>/src/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "jsx",
