--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "src/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.spec.ts"
   ],
   "compileOnSave": false
 }
