log4js properties for each environment

--- a/config/default.yml
+++ b/config/default.yml
@@ -1,20 +1,1 @@
-log4js:
-  appenders:
-    file:
-      type: 'dateFile'
-      filename: 'logs/veau.log'
-      pattern: '-yyyy-MM-dd.log'
-      daysToKeep: 30
-      layout:
-        type: 'coloured'
-    console:
-      type: 'console'
-      layout:
-        type: 'coloured'
-  categories:
-    default:
-      appenders:
-        - 'file'
-        - 'console'
-      level: 'info'
-  pm2: true
+dummy: ''
