--- a/config/k8s.yml
+++ b/config/k8s.yml
@@ -17,3 +17,15 @@ mysql:
   connectionLimit: 50
   connectTimeout: 60000
   acquireTimeout: 60000
+log4js:
+  appenders:
+    console:
+      type: 'console'
+      layout:
+        type: 'coloured'
+  categories:
+    default:
+      appenders:
+        - 'console'
+      level: 'info'
+  pm2: true
