--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,7 @@
     "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
+    "node_modules"
   ],
   "compileOnSave": false
 }
