--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "gulp-sass": "4.0.2",
     "gulp-typescript": "5.0.1",
     "jest": "24.8.0",
+    "p-locate": "4.1.0",
     "react-test-renderer": "16.8.6",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
