enable rolling update

--- a/deployment/k8s/veau-deployment.yml
+++ b/deployment/k8s/veau-deployment.yml
@@ -24,5 +24,8 @@ spec:
               value: 'k8s'
           ports:
             - containerPort: 4000
+          resources:
+            requests:
+              cpu: 50m
         - name: 'veau-redis'
           image: 'redis:5.0.4-alpine'
