--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/config": "0.0.34",
     "@types/connect-redis": "0.0.10",
     "@types/enzyme": "3.9.2",
+    "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/express": "4.16.1",
     "@types/express-session": "1.15.12",
     "@types/helmet": "0.0.43",
