--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,15 @@
     },
     "project": "./tsconfig.json"
   },
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
     "arrow-parens": "error",
     "comma-dangle": "error",
@@ -50,6 +59,7 @@
     "no-new-func": "error",
     "no-new-wrappers": "error",
     "no-param-reassign": "error",
+    "no-prototype-builtins": "off",
     "no-redeclare": "error",
     "no-restricted-imports": "error",
     "no-return-await": "error",
@@ -63,6 +73,7 @@
     "no-unsafe-finally": "error",
     "no-unused-expressions": "error",
     "no-unused-labels": "error",
+    "no-useless-escape": "off",
     "no-var": "error",
     "no-void": "error",
     "object-shorthand": "error",
@@ -106,6 +117,8 @@
     "@typescript-eslint/ban-types": "error",
     "@typescript-eslint/class-name-casing": "error",
     "@typescript-eslint/explicit-member-accessibility": "error",
+    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/member-delimiter-style": "error",
     "@typescript-eslint/member-ordering": [
       "error",
@@ -121,7 +134,9 @@
     ],
     "@typescript-eslint/no-angle-bracket-type-assertion": "error",
     "@typescript-eslint/no-empty-interface": "error",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-for-in-array": "error",
+    "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-misused-new": "error",
     "@typescript-eslint/no-namespace": "error",
     "@typescript-eslint/no-non-null-assertion": "error",
@@ -137,9 +152,11 @@
     "@typescript-eslint/no-triple-slash-reference": "error",
     "@typescript-eslint/no-unnecessary-qualifier": "error",
     "@typescript-eslint/no-unnecessary-type-assertion": "error",
+    "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-use-before-define": "error",
     "@typescript-eslint/no-var-requires": "error",
     "@typescript-eslint/prefer-function-type": "error",
+    "@typescript-eslint/prefer-interface": "off",
     "@typescript-eslint/restrict-plus-operands": "error",
     "@typescript-eslint/type-annotation-spacing": [
       "error",
