--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "lint": "eslint 'src/**/*.ts{,x}' --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.9.0",
+    "@fortawesome/fontawesome-free": "5.10.0",
     "@handsontable/react": "3.0.0",
-    "@material-ui/core": "4.2.1",
+    "@material-ui/core": "4.3.0",
     "bcrypt": "3.0.6",
     "body-parser": "1.19.0",
     "bourbon-neat": "4.0.0",
     "chance": "1.0.18",
+    "check-types": "9.0.1",
     "compression": "1.7.4",
     "config": "3.2.2",
     "connect-redis": "3.4.2",
@@ -35,7 +36,6 @@
     "http-status": "1.3.2",
     "ioredis": "4.11.2",
     "js-yaml": "3.13.1",
-    "lodash": "4.17.15",
     "log4js": "4.5.1",
     "moment": "2.24.0",
     "mysql": "2.17.1",
@@ -60,6 +60,7 @@
     "@types/bcrypt": "3.0.0",
     "@types/body-parser": "1.17.0",
     "@types/chance": "1.0.5",
+    "@types/check-types": "7.3.1",
     "@types/compression": "0.0.36",
     "@types/config": "0.0.34",
     "@types/connect-redis": "0.0.10",
@@ -70,8 +71,7 @@
     "@types/helmet": "0.0.43",
     "@types/history": "4.7.2",
     "@types/ioredis": "4.0.13",
-    "@types/jest": "24.0.15",
-    "@types/lodash": "4.14.136",
+    "@types/jest": "24.0.16",
     "@types/mysql": "2.15.6",
     "@types/node": "12.6.8",
     "@types/passport": "1.0.0",
