--- a/.eslintrc
+++ b/.eslintrc
@@ -18,10 +18,13 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
   "rules": {
     "arrow-parens": "error",
+    "camelcase": "off",
     "comma-dangle": "error",
     "constructor-super": "error",
     "curly": [
@@ -32,7 +35,9 @@
     "dot-notation": "error",
     "eol-last": "error",
     "eqeqeq": "error",
+    "func-call-spacing": "off",
     "guard-for-in": "error",
+    "indent": "off",
     "max-classes-per-file": [
       "error",
       1
@@ -46,7 +51,9 @@
     "no-debugger": "error",
     "no-duplicate-case": "error",
     "no-empty": "error",
+    "no-empty-function": "off",
     "no-eval": "error",
+    "no-extra-parens": "off",
     "no-fallthrough": "error",
     "no-invalid-this": "error",
     "no-irregular-whitespace": [
@@ -55,6 +62,7 @@
         "skipStrings": false
       }
     ],
+    "no-magic-numbers": "off",
     "no-multiple-empty-lines": "error",
     "no-new-func": "error",
     "no-new-wrappers": "error",
@@ -73,6 +81,8 @@
     "no-unsafe-finally": "error",
     "no-unused-expressions": "error",
     "no-unused-labels": "error",
+    "no-unused-vars": "off",
+    "no-useless-constructor": "off",
     "no-useless-escape": "off",
     "no-var": "error",
     "no-void": "error",
@@ -89,7 +99,8 @@
       "single"
     ],
     "radix": "error",
-    "semi": "error",
+    "require-await": "off",
+    "semi": "off",
     "space-before-function-paren": [
       "error",
       {
@@ -112,14 +123,64 @@
     "@typescript-eslint/adjacent-overload-signatures": "error",
     "@typescript-eslint/array-type": [
       "error",
-      "generic"
+      {
+        "default": "generic"
+      }
     ],
+    "@typescript-eslint/await-thenable": "error",
+    "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/ban-types": "error",
+    "@typescript-eslint/camelcase": [
+      "error",
+      {
+        "properties": "always"
+      }
+    ],
     "@typescript-eslint/class-name-casing": "error",
-    "@typescript-eslint/explicit-member-accessibility": "error",
-    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/consistent-type-assertions": [
+      "error",
+      {
+        "assertionStyle": "as",
+        "objectLiteralTypeAssertions": "allow"
+      }
+    ],
+    "@typescript-eslint/consistent-type-definitions": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true,
+        "allowTypedFunctionExpressions": true,
+        "allowHigherOrderFunctions": true
+      }
+    ],
+    "@typescript-eslint/explicit-member-accessibility": [
+      "error",
+      {
+        "accessibility": "explicit"
+      }
+    ],
+    "@typescript-eslint/func-call-spacing": [
+      "error",
+      "never"
+    ],
+    "@typescript-eslint/generic-type-naming": "off",
+    "@typescript-eslint/indent": [
+      "error",
+      2
+    ],
     "@typescript-eslint/interface-name-prefix": "off",
-    "@typescript-eslint/member-delimiter-style": "error",
+    "@typescript-eslint/member-delimiter-style": [
+      "error",
+      {
+        "multiline": {
+          "delimiter": "semi"
+        },
+        "singleline": {
+          "delimiter": "semi"
+        }
+      }
+    ],
+    "@typescript-eslint/member-naming": "off",
     "@typescript-eslint/member-ordering": [
       "error",
       {
@@ -132,15 +193,40 @@
         ]
       }
     ],
-    "@typescript-eslint/no-angle-bracket-type-assertion": "error",
-    "@typescript-eslint/no-empty-interface": "error",
+    "@typescript-eslint/no-array-constructor": "error",
+    "@typescript-eslint/no-empty-function": "error",
+    "@typescript-eslint/no-empty-interface": [
+      "error",
+      {
+        "allowSingleExtends": false
+      }
+    ],
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-extra-parens": [
+      "error",
+      "all"
+    ],
+    "@typescript-eslint/no-extraneous-class": "off",
+    "@typescript-eslint/no-floating-promises": "error",
     "@typescript-eslint/no-for-in-array": "error",
     "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/no-magic-numbers": "off",
     "@typescript-eslint/no-misused-new": "error",
-    "@typescript-eslint/no-namespace": "error",
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksConditionals": true,
+        "checksVoidReturn": false
+      }
+    ],
+    "@typescript-eslint/no-namespace": [
+      "error",
+      {
+        "allowDeclarations": true,
+        "allowDefinitionFiles": true
+      }
+    ],
     "@typescript-eslint/no-non-null-assertion": "error",
-    "@typescript-eslint/no-object-literal-type-assertion": "error",
     "@typescript-eslint/no-parameter-properties": "error",
     "@typescript-eslint/no-require-imports": "error",
     "@typescript-eslint/no-this-alias": [
@@ -149,15 +235,35 @@
         "allowDestructuring": true
       }
     ],
-    "@typescript-eslint/no-triple-slash-reference": "error",
+    "@typescript-eslint/no-type-alias": "off",
     "@typescript-eslint/no-unnecessary-qualifier": "error",
+    "@typescript-eslint/no-unnecessary-type-arguments": "off",
     "@typescript-eslint/no-unnecessary-type-assertion": "error",
-    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": true
+      }
+    ],
     "@typescript-eslint/no-use-before-define": "error",
+    "@typescript-eslint/no-useless-constructor": "error",
     "@typescript-eslint/no-var-requires": "error",
-    "@typescript-eslint/prefer-function-type": "error",
-    "@typescript-eslint/prefer-interface": "off",
+    "@typescript-eslint/prefer-for-of": "off",
+    "@typescript-eslint/prefer-function-type": "off",
+    "@typescript-eslint/prefer-includes": "error",
+    "@typescript-eslint/prefer-namespace-keyword": "off",
+    "@typescript-eslint/prefer-readonly": "off",
+    "@typescript-eslint/prefer-regexp-exec": "error",
+    "@typescript-eslint/prefer-string-starts-ends-with": "error",
+    "@typescript-eslint/promise-function-async": "off",
+    "@typescript-eslint/require-array-sort-compare": "error",
+    "@typescript-eslint/require-await": "error",
     "@typescript-eslint/restrict-plus-operands": "error",
+    "@typescript-eslint/semi": "error",
+    "@typescript-eslint/strict-boolean-expressions": "error",
+    "@typescript-eslint/triple-slash-reference": "off",
     "@typescript-eslint/type-annotation-spacing": [
       "error",
       {
@@ -170,6 +276,25 @@
           }
         }
       }
-    ]
+    ],
+    "@typescript-eslint/typedef": [
+      "error",
+      {
+        "arrayDestructuring": false,
+        "arrowParameter": true,
+        "memberVariableDeclaration": true,
+        "objectDestructuring": false,
+        "parameter": true,
+        "propertyDeclaration": true,
+        "variableDeclaration": true
+      }
+    ],
+    "@typescript-eslint/unbound-method": [
+      "error",
+      {
+        "ignoreStatic": true
+      }
+    ],
+    "@typescript-eslint/unified-signatures": "error"
   }
 }
