--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",
+    "typeRoots": [
+      "./typings"
+    ],
     "types": [
       "node",
       "jest"
