--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",
+    "baseUrl": "./",
+    "typeRoots": [
+      "node_modules/@types",
+      "src/typings"
+    ],
     "types": [
       "node",
       "jest"
