--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",
-    "baseUrl": "/",
+    "baseUrl": ".",
     "typeRoots": [
-      "src/@types",
-      "node_modules/@types"
+      "node_modules/@types",
+      "src/@types"
     ],
     "types": [
       "node",
@@ -30,6 +30,7 @@
     "src/**/*.d.ts"
   ],
   "exclude": [
+    "dist",
     "node_modules",
     "src/**/*.spec.ts"
   ],
