--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,7 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.d.ts"
+    "src/**/*.tsx"
   ],
   "exclude": [
     "dist",
