--- a/.eslintrc
+++ b/.eslintrc
@@ -183,7 +183,7 @@
         "VariableDeclarator": {
           "var": 2,
           "let": 2,
-          "const": 3,
+          "const": 3
         }
       }
     ],
