--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 
     /* Strict Type-Checking Options */
     "strict": true,
+    "noImplicitAny": true,
 
     /* Module Resolution Options */
     "moduleResolution": "node",
