--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start": "pm2-runtime start ecosystem.config.js",
     "stop": "pm2-runtime stop ecosystem.config.js",
     "test": "jest test --detectOpenHandles --coverage",
-    "lint": "eslint 'src/**/*.ts{,x}' --fix",
-    "dev": "ts-node"
+    "lint": "eslint 'src/**/*.ts{,x}' --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.11.2",
@@ -36,7 +35,7 @@
     "http-status": "1.3.2",
     "ioredis": "4.14.1",
     "js-yaml": "3.13.1",
-    "log4js": "5.2.0",
+    "log4js": "5.2.1",
     "moment": "2.24.0",
     "mysql": "2.17.1",
     "passport": "0.4.0",
@@ -72,14 +71,14 @@
     "@types/ioredis": "4.0.18",
     "@types/jest": "24.0.18",
     "@types/mysql": "2.15.7",
-    "@types/node": "12.7.11",
+    "@types/node": "12.7.12",
     "@types/passport": "1.0.1",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/react-redux": "7.1.4",
     "@types/react-router-dom": "5.1.0",
-    "@types/recharts": "1.1.21",
+    "@types/recharts": "1.1.22",
     "@types/redux-logger": "3.0.7",
     "@types/redux-mock-store": "1.0.1",
     "@types/request": "2.48.3",
