--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "ecmaFeatures": {
       "jsx": true
     },
+    "project": "./tsconfig.json",
     "tsconfigRootDir": "."
   },
   "plugins": [
