--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "helmet": "3.21.2",
     "history": "4.10.1",
     "http-status": "1.4.0",
+    "inversify": "5.0.1",
     "ioredis": "4.14.1",
     "js-yaml": "3.13.1",
     "log4js": "5.3.0",
@@ -51,6 +52,7 @@
     "redux": "4.0.4",
     "redux-logger": "3.0.6",
     "redux-saga": "1.1.1",
+    "reflect-metadata": "0.1.13",
     "request": "2.88.0",
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.13",
@@ -61,7 +63,7 @@
     "@types/chance": "1.0.7",
     "@types/check-types": "7.3.1",
     "@types/compression": "1.0.1",
-    "@types/config": "0.0.34",
+    "@types/config": "0.0.35",
     "@types/connect-redis": "0.0.11",
     "@types/enzyme": "3.10.3",
     "@types/enzyme-adapter-react-16": "1.0.5",
@@ -72,7 +74,7 @@
     "@types/ioredis": "4.0.18",
     "@types/jest": "24.0.19",
     "@types/mysql": "2.15.7",
-    "@types/node": "12.11.5",
+    "@types/node": "12.11.6",
     "@types/passport": "1.0.1",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.9.9",
