--- a/deployment/k8s/veau-deployment.yml
+++ b/deployment/k8s/veau-deployment.yml
@@ -25,6 +25,8 @@ spec:
           ports:
             - containerPort: 4000
           resources:
+            limits:
+              cpu: '1'
             requests:
               cpu: '50m'
         - name: 'veau-redis'
