--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ioredis": "4.16.1",
     "js-yaml": "3.13.1",
     "log4js": "6.1.2",
+    "make-error-cause": "2.3.0",
     "moment": "2.24.0",
     "mysql": "2.18.1",
     "passport": "0.4.1",
