--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "start": "pm2-runtime start pm2.config.js",
     "stop": "pm2-runtime stop pm2.config.js",
     "test": "jest test --detectOpenHandles --coverage",
-    "lint": "eslint 'src/**/*.ts{,x}' --fix"
+    "lint": "eslint 'src/**/*.ts{,x}' --fix",
+    "update": "ncu -u"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.13.0",
     "@handsontable/react": "3.1.2",
-    "@material-ui/core": "4.9.9",
+    "@material-ui/core": "4.9.10",
     "bcrypt": "4.0.1",
     "bourbon-neat": "4.0.0",
     "chance": "1.1.4",
@@ -34,7 +35,7 @@
     "history": "4.10.1",
     "http-status": "1.4.2",
     "inversify": "5.0.1",
-    "ioredis": "4.16.1",
+    "ioredis": "4.16.2",
     "js-yaml": "3.13.1",
     "log4js": "6.1.2",
     "make-error-cause": "2.3.0",
@@ -79,14 +80,14 @@
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
     "@types/react-redux": "7.1.7",
-    "@types/react-router-dom": "5.1.3",
+    "@types/react-router-dom": "5.1.4",
     "@types/recharts": "1.8.9",
     "@types/redux-logger": "3.0.7",
     "@types/serve-favicon": "2.5.0",
     "@types/sinon": "9.0.0",
     "@types/superagent": "4.1.7",
     "@types/supertest": "2.0.8",
-    "@types/webpack": "4.41.10",
+    "@types/webpack": "4.41.11",
     "@typescript-eslint/eslint-plugin": "2.27.0",
     "@typescript-eslint/parser": "2.27.0",
     "@typescript-eslint/typescript-estree": "2.27.0",
@@ -100,6 +101,7 @@
     "gulp-sass": "4.0.2",
     "gulp-typescript": "6.0.0-alpha.1",
     "jest": "25.3.0",
+    "npm-check-updates": "4.1.2",
     "rimraf": "3.0.2",
     "sinon": "9.0.2",
     "supertest": "4.0.2",
