--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "stop": "pm2-runtime stop pm2.yml",
     "test": "jest test --detectOpenHandles --coverage",
     "lint": "eslint 'src/**/*.ts{,x}' --fix",
-    "update": "ncu -u"
+    "update": "ncu -u && yarn install"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.13.0",
@@ -37,7 +37,7 @@
     "inversify": "5.0.1",
     "ioredis": "4.16.2",
     "js-yaml": "3.13.1",
-    "log4js": "6.1.2",
+    "log4js": "6.2.0",
     "make-error-cause": "2.3.0",
     "moment": "2.24.0",
     "mysql": "2.18.1",
@@ -46,7 +46,7 @@
     "pug": "2.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-intl": "4.3.1",
+    "react-intl": "4.4.0",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "recharts": "2.0.0-beta.3",
@@ -88,9 +88,9 @@
     "@types/superagent": "4.1.7",
     "@types/supertest": "2.0.8",
     "@types/webpack": "4.41.11",
-    "@typescript-eslint/eslint-plugin": "2.27.0",
-    "@typescript-eslint/parser": "2.27.0",
-    "@typescript-eslint/typescript-estree": "2.27.0",
+    "@typescript-eslint/eslint-plugin": "2.28.0",
+    "@typescript-eslint/parser": "2.28.0",
+    "@typescript-eslint/typescript-estree": "2.28.0",
     "eslint": "6.8.0",
     "eslint-plugin-react": "7.19.0",
     "gulp": "4.0.2",
